--- a/app/views/layouts/_user_side_bar.html.erb
+++ b/app/views/layouts/_user_side_bar.html.erb
@@ -1,9 +1,9 @@
 
-
+<!--
  <div class="sidebar">
 
  
-
+<nav>
  <ul>
     <li>
       <%= link_to projects_path, class: "#{is_current_page?(projects_path)} item" do %>
@@ -24,5 +24,6 @@
     </li>
   
 </ul>
-
+</nav>
 </div>
+-->
