--- a/app/views/projects/chart.html.erb
+++ b/app/views/projects/chart.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 <br />
-<h2> Veja os gráficos abaixo referentes ao projeto <%= current_project.name %> : </h2>
+<h2> Gráficos do projeto <%= current_project.name %> : </h2>
 
 <%= render 'charts/breadcrumb' %>
 <br />
@@ -17,7 +17,7 @@
 </div>
 <% else %>
 
-<fieldset>
+<div class="content_charts">
 
   <b> Quantidade de User Stories:</b> <%= UserStory.where(project: current_project).count %> <br />
   <b> Quantidade de Sprint:</b> <%= Sprint.where(project: current_project).count %> <br />
@@ -29,7 +29,7 @@
                                                                 WHERE kind_id = 1 AND project_id = '#{ current_project_id }'").count %> <br />
 
 
-</fieldset>
+</div>
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
