--- a/app/views/sprints/_form.html.erb
+++ b/app/views/sprints/_form.html.erb
@@ -98,7 +98,7 @@
   <div class="inline field">
     <b><%= f.label :release_id %></b>
     <br />
-    <%= f.collection_select(:release_id,Release.all,:id,:version,{:prompt=>true},{class: 'ui search dropdown'}) %>
+    <%= f.collection_select(:release_id,Release.all,:id,:version,{:prompt=>true}) %>
   </div>
 
    <br />
