--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,12 +1,9 @@
-<!-- NAVBAR -->
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container">
-    <!-- links da navbar -->
-    <div class="collapse navbar-collapse navbar-submenu-collapse">
-    </div>
-    <!-- /.navbar-collapse -->
-  </div>
-</nav>
+<br />
+<div class="container">
+    <h2>Editando task</h2>   
+</div>
+
 <!-- /NAVBAR -->
 
 <%= render 'form' %>
+
