--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,15 +1,8 @@
-
+<br />
 <div class="container">
-  <div class="ui menu">
-    <a href="#" class="item active"><strong>Tasks</strong></a>
-    <%= link_to "Nova tarefa", tasks_path, class: 'item' %>
-    <%= link_to "Cancelar", tasks_path, class: 'item' %>
-  </div>
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container">
+    <h2>Tasks</h2>   
+</div>
 
- 
-</nav>
 <!-- /NAVBAR -->
 
 <%= render 'form' %>
