--- a/app/views/notifications/_take_xp.html.erb
+++ b/app/views/notifications/_take_xp.html.erb
@@ -1,8 +1,4 @@
-<h2>
-  <i class="gift icon"></i>
-  Você concluiu a tarefa e ganhou <%= notification.target.user_story.story_points %> pontos de XP
-</h2>
-<p>
-  Nas habilidades:
-
-</p>
+<br />
+<h3>
+  Você concluiu a tarefa.
+</h3>
