--- a/app/views/projects/_modal_tasks.html.erb
+++ b/app/views/projects/_modal_tasks.html.erb
@@ -2,7 +2,7 @@
 <div class="ui small modal usertory-<%= us.id %>">
   
   <div class="header">
-    User Story
+ US-<%= us.project.initial%>-<%= us.id %> <%= us.title %>
   </div>
   
   <div class="content">
@@ -10,19 +10,9 @@
       <div class="row">
         <div class="sixteen wide tablet sixteen wide computer column">
           <p>
-            <strong>Tema:</strong>
-          </p>
-          <p>
             <strong>Descrição:</strong>
             <%= us.description %>    
           </p>
-          <hr>
-          <p>
-            <strong>Critérios de Aceitação</strong>
-          </p>
-          <% us.user_story_acceptance_criterions.each do |c| %>
-          <p><%= c.description %></p>
-          <% end %>
         </div>
       </div>
     </div> 
