--- a/app/views/user_stories/_form.html.erb
+++ b/app/views/user_stories/_form.html.erb
@@ -40,6 +40,7 @@
 
     <div>
       <b><%= f.label :description %></b>
+      <br />
       <%= f.text_area :description %>
     </div>
 
@@ -65,8 +66,8 @@
     </div>
    
     <br />
-        <%= link_to 'Salvar', new_user_story_path({ controller: 'user_stories', action: 'create' }), class: 'item save blue_button' %>
-        <%= link_to 'Cancelar', user_stories_path, class: 'item save red_button' %>
+        <%= link_to 'Salvar', new_user_story_path({ controller: 'user_stories', action: 'create' }), class: 'save blue_button' %>
+        <%= link_to 'Cancelar', user_stories_path, class: 'save red_button' %>
     <br />
     <br />
   <% end %>
