--- a/app/views/user_stories/index.html.erb
+++ b/app/views/user_stories/index.html.erb
@@ -1,4 +1,53 @@
+<style>
+body {font-family: Arial, Helvetica, sans-serif;}
 
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  border: 1px solid #888;
+  width: 50%;
+  margin-top:-90px;
+  padding:10px
+}
+
+.modal-content form{
+  margin-left: -120px
+}
+
+.modal-content h2{
+  text-align: center;
+}
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+</style>
 
 <div class="container">
  <div class="info_accordion">
@@ -36,22 +85,24 @@
 
 <% @user_stories.each do |user_story| %>
 <button class="us_accordion">
-      <%= link_to user_story do %>
-      <div class="green_button">
-        US-<%= user_story.project.initial %>-<%= user_story.id %> 
-      </div> 
-         <%= user_story.title %>
+       <%= link_to user_story do %>
+        <div class="silver_button">
+          US-<%= user_story.project.initial %>-<%= user_story.id %> 
+        </div> 
+           <%= user_story.title %>
       <% end %>
       
       <% if user_story.sprint.nil? %>
       
       <% else %>
       <div class="info_accordion">
-     
-         <%= link_to "Sprint: #{user_story.sprint.name}", scrumboard_path(user_story.project.id), class: 'ui compact teal mini button', title: 'Acessar board da sprint' %> 
+        <div class="mini_info_button">
+          <b>Sprint: </b>
+         <%= link_to "#{user_story.sprint.name}", scrumboard_path(user_story.project.id), title: 'Acessar board da sprint' %> 
       </div>
-     <% end %>
 
+     <% end %>
+    </div>
       <div class="info_accordion">
       <% if user_story.priority_id == 1 %>
           <div class="mini_red_button">
@@ -68,7 +119,7 @@
       <% end %>
 
       <% if user_story.priority_id == 3 %>
-        <div class="mini_green_button ">
+        <div class="mini_green_button">
             <b>Prioridade: </b>
             Baixa
         </div>
@@ -100,48 +151,49 @@
             <p></p>
             <b>Lista de Sub-task associadas</b>
           
-            <a class="blue_button" userstory="<%= user_story.id %>" title="Adicionar tarefa">+ Adicionar</a>
+            <a class="blue_button" userstory="<%= user_story.id %>" title="Adicionar tarefa" id="myBtn">+ Adicionar</a>
             <br />  
-            <p>
+
               <% user_story.tasks.each do |s| %>
              
-
-              <div class="kind_task_accordion">
-                     <% if s.kind_id == 1 %>
-                       <%= image_tag('bug.png', title: "Task do tipo BUG") %>
-                     <% else %>
-                       <%= image_tag('clipboard-task.png', title: "Task do tipo Sub-task") %>
-                     <% end %>
-             </div>
-                
-
-                 <%= link_to edit_task_path(s.id) do %>
-                     <div class="ui button">TK-<%= user_story.project.initial %>-<%= s.id %> <%= s.title %></div>
-                 <% end %>
-
-                  <% if s.priority_id == 1 %>
-                 
-                    <div class="ui compact mini icon red basic button">
-                    <b>Prioridade: </b>
-                     Alta
+              <p>           
+                  <div class="kind_task_accordion">
+                         <% if s.kind_id == 1 %>
+                           <%= image_tag('bug.png', title: "Task do tipo BUG") %>
+                         <% else %>
+                           <%= image_tag('clipboard-task.png', title: "Task do tipo Sub-task") %>
+                         <% end %>
                  </div>
+       
+                 <%= link_to edit_task_path(s.id) do %>
+                     <div class="green_button">
+                          TK-<%= user_story.project.initial %>-<%= s.id %> <%= s.title %>
+                     </div>
+                 <% end %>
+                  
+                  <% if s.priority_id == 1 %>
+                    <div class="red_button">
+                      <b>Prioridade: </b>
+                       Alta
+                    </div>
                  <% end %>
 
                  <% if s.priority_id == 2 %>
-                    <div class="ui compact mini silver icon orange basic button ">
+                    <div class="orange_button ">
                         <b>Prioridade: </b>
                           Média
                     </div>
                  <% end %>
 
                   <% if s.priority_id == 3 %>
-                    <div class="ui compact mini icon green basic button ">
+                    <div class="green_button ">
                         <b>Prioridade: </b>
                         Baixa
                     </div>
                  <% end %>
 
-                 <div class="ui compact mini icon silver basic button"><b>Status: </b>
+                 <div class="silver_button">
+                 <b>Status: </b>
                      <% if s.status == 1 %>
                       Pendente
                      <% end %>
@@ -158,14 +210,13 @@
                       Concluída
                      <% end %>
                 </div>
-                 
+            
                  <%= link_to s, method: :delete, class: "delete_task_accordion", data: { confirm: "Deseja deletar a tarefa TK-#{user_story.project.initial}-#{ s.id } #{s.title} ?" }, title: "Remover tarefa TK-#{user_story.project.initial}-#{ s.id } #{s.title}" do %>
                    <%= image_tag('delete_btn.png') %>
                  <% end %>
-              </p>
-          
+            </p> 
             <% end %>
-          
+            
           <br />
           <br /> 
               <%= link_to edit_user_story_path(user_story), class: 'yellow_button' do %>
@@ -178,59 +229,127 @@
               
             <br />
             <br />    
-      </div>          
+      </div>   
+        
 <% end %>
 
+<div id="myModal" class="modal">
+  <div class="modal-content">
+    <div class="container">
+         <span class="close">&times;</span>
+        <%= form_for(@task, html: {class: 'form'}) do |f| %>
 
-<!-- MODAL TAREFA -->
-<div class="container">
-  <div class="ui small modal task">
-    
-    <div class="header">
-      Adicionar tarefa
-    </div>
-    
-    <div class="content">
-      <div class="ui grid">
-        <div class="row">
-          <div class="sixteen wide tablet eight wide computer column">
-            <%= form_for(@task, html: {class: 'ui form'}) do |f| %>
-              <div class="field">
+       <% if @task.errors.any? %>
+        <div class="alert_danger">
+           <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+              <div class="header">
+            <% @task.errors.full_messages.each do |message| %>
+                <p> - <%= message %> </p>
+            <% end %>
+          </div>
+          </div>
+       <% end%>
+
+        <br />
+              <div>
                 <label><strong>Título: </strong></label>
+                <br />
                 <%= f.text_field :title %>
               </div>
 
-              <div class="field">
+              <div>
                 <label><strong>Descrição: </strong></label>
-                <%= f.rich_text_area :description  %>
+                <br />
+                <%= f.text_area :description  %>
               </div>
-              
-              <div class="field">
-                <label><strong>Tipo da task </strong></label>
-                <%= f.select :kind_id, Kind.all.collect {|x| [x.name, x.id]}, { prompt: 'Selecionar o tipo de tarefa' }, class: "ui search dropdown" %>
-              </div>
-              
 
-              <div class="field">
-                <label><strong>Prioridade</strong></label>
-                <%= f.select :priority_id, Priority.all.collect {|x| [x.name, x.id]}, { prompt: 'Selecionar a prioridade de tarefa' }, class: "ui search dropdown" %>
+               <div>               
+                <br />
+                <label><strong>User Story</strong></label>
+                <br />
+                <%= f.collection_select(:user_story_id, current_project.user_stories, :id, :title, {:prompt=>false}) %>
+              
               </div>
               
-              <div class="field">
+              <div>
+                <label><strong>Tipo da task </strong></label>
+                <br />
+                <%= f.select :kind_id, Kind.all.collect {|x| [x.name, x.id]}, { prompt: 'Selecionar o tipo de tarefa' } %>
+              </div>
+
+                <div>
+                <%= f.label :status %>
+                <br />
+
+                  <%= f.select :status, options_for_select({'Pendente' => 1 , 'Desenvolvimento' => 2 , 'Code Review' => 3, 'QA' => 4 , 'Concluída' => 5 }), {:prompt => false}, {  placeholder: 'Status' } %>
+              </div>
+
+              <div>
+                <label><strong>Prioridade</strong></label>
+                <br />
+                <%= f.select :priority_id, Priority.all.collect {|x| [x.name, x.id]}, { prompt: 'Selecionar a prioridade de tarefa' } %>
+              </div>
+              
+              <div>
                 <%= f.hidden_field :user_story_id %>
                 <%= f.hidden_field :status, value: '1' %>
               </div>
 
-              <div class="field">
-                <%= f.submit 'Adicionar', class: 'ui teal button' %>
+              <div>
+                <%= f.submit 'Adicionar', class: 'blue_button' %>
               </div>
             <% end %>
-          </div>
-        </div>
-      </div> 
     </div>
   </div>
+
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal 
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+
+ $('.ui.search.dropdown').dropdown({ allowLabels:true});
+
+ $('.button.new_criterion').click(function(){
+    $('#user_story_acceptance_criterion_user_story_id').val($(this).attr('userstory'));
+    $('.ui.modal.criterion').modal('show');
+    return false;
+ });
+
+ $('.button.new_task').click(function(){
+    $('#task_user_story_id').val($(this).attr('userstory'));
+    $('.ui.modal.task').modal('show');
+    return false;
+ });
+  
+</script>
+
+
   <% end %> 
+
 
   <br />
   <%= paginate @user_stories %>
@@ -240,26 +359,17 @@
 
 </div>
 
+
+
 <!-- /MODAL TAREFA -->
 <script type="text/javascript">
   $(document).ready(function() {
     //$('.sortable').tablesort();
   });
 
-  $('.dropdown').dropdown({ allowLabels:true});
 
-  $('.button.new_criterion').click(function(){
-    $('#user_story_acceptance_criterion_user_story_id').val($(this).attr('userstory'));
-    $('.ui.modal.criterion').modal('show');
-    return false;
-  });
 
-  $('blue_button').click(function(){
-    $('#task_user_story_id').val($(this).attr('userstory'));
-    $('.modal_task').modal('show');
-    return false;
-  });
-  
+ 
   ///Accordion
 
   var acc = document.getElementsByClassName("us_accordion");
@@ -276,4 +386,7 @@
       }
     });
   }
+
+
+  
 </script>
